--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ email: blog@boctor.net
 description: >- # this means to ignore newlines until "baseurl:"
   Peter Boctor's blog full of random thoughts.
 baseurl: "" # the subpath of your site, e.g. /blog
+repository: "boctor/boctor.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: boctor
 github_username:  boctor
@@ -35,7 +36,7 @@ comments:
     repo_id: "R_kgDOGaDgXQ"
     category_name: "Blog Post"
     category_id: "DIC_kwDOGaDgXc4COCAA"
-    discussion_term: "pathname"
+    discussion_term: "og:title"
     reactions_enabled: '1'
     theme: "light"
 
